# apipred

./: README.md  extract.py  predict.py  pyproject.toml  train_model.py
examples/: example_output_tg.tsv
tests/: test_smoke.py
