[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apipred"
version = "1.2.0"
description = "Predict fitness, compartments, and invasion machinery in apicomplexan proteomes from ESM-2 embeddings."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "James McCabe" }]
keywords = ["apicomplexa", "esm2", "protein-language-model", "toxoplasma",
            "plasmodium", "invasion", "compartment-prediction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "torch>=1.12.0,<3.0.0",
    "fair-esm>=2.0.0",
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "joblib>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/jsmccabe1/ApiPred"
Issues = "https://github.com/jsmccabe1/ApiPred/issues"

[project.scripts]
apipred = "predict:main"
apipred-extract = "extract:main"

[tool.setuptools]
py-modules = ["predict", "train_model", "extract"]
